update and extend examples set.

--- a/examples/metadata.tex
+++ b/examples/metadata.tex
@@ -42,13 +42,13 @@
 % another thematic block
 \begin{SessionBlock}{Die Geschichte meiner Wissenschaft}
 
-	\NewSession[bibsec=anf, presstudents={John Doe}]{Die Anf\"ange}
+	\NewSession[bibsec=anf, presstudents={Johannes Schmidt}]{Die Anf\"ange}
 
-	\NewSession[bibsec=erf, presstudents={Jane Doo}]{Erste Erfolge}
+	\NewSession[bibsec=erf, presstudents={Clara Vanderfeld}]{Erste Erfolge}
 
 	\NewSession[cancel=true]{Dies Academicus}
 
-	\NewSession[bibsec=konk, presstudents={Jim Dan}]{Konkurrenzk\"ampfe}
+	\NewSession[bibsec=konk, presstudents={Jana Braun}]{Konkurrenzk\"ampfe}
 
 	\NewSession[%
 		titlesep={:\ },
@@ -69,7 +69,7 @@
 
 	\NewSession[bibsec=wesentl]{Bestimmung des Wesentlichen}
 
-	\NewSession[bibsec=fok]{Fokussierung auf das Wesentliche}
+	\NewSession[bibsec=fok, presstudents={Andy Braun}]{Fokussierung auf das Wesentliche}
 
 	\NewSession[bibsec=rekap]{Rekapitulation der Wesensbestimmung}
 
@@ -81,13 +81,15 @@
 	\NewSession[%
 		titlesep={:\ },
 		subtitle={Mein Institut},
-                bibsec=lokal
+                bibsec=lokal,
+                presstudents={Rolf Brandner}
 	]{Das lokale Umfeld}
 
 	\NewSession[%
 		titlesep={:\ },
 		subtitle={Die Welt},
-                bibsec=welt
+                bibsec=welt,
+                presstudents={Z\"oe Peters}
 	]{Der Rest}
 
 \end{SessionBlock}
