--- a/examples/presentation-list.tex
+++ b/examples/presentation-list.tex
@@ -22,7 +22,7 @@
 
 \maketitle
 
-\section*{Student presentations}
+\section*{Studentische Pr\"asentationen}
 
 \setfirstpressession{2}
 \setlastpressession{12}
