Comment nit-picks

--- a/jsmembertable.sty
+++ b/jsmembertable.sty
@@ -44,12 +44,9 @@
 \RequirePackage{xkeyval}
 
 %
-% OPTIONS
-%
-
-%
 % PACKAGE OPTIONS
 %
+
 \newif\if@datatool\@datatoolfalse
 \def\jsmt@datafile{}
 \define@key{mem}{datafile}{%
@@ -60,7 +57,7 @@
 \ProcessOptionsX
 
 %
-% EXTRA PACKAGES
+% OPT-IN PACKAGES
 %
 
 % Load datatool if necessary
