document foreign code use.

--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -945,8 +945,8 @@ I am deeply indepted to the authors of those packages.
 Furthermore, \emph{stackexchange} proved to be a great source of knowledge which
 provided me with solutions for specific tasks:
 \jsmt\ heavily draws on code for dynamic table generation that has been
-provided by Herbert Voss (\url{http://tex.stackexchange.com/a/7594}); the \jslp\ package
-uses code to test for \jfcsmacro{romannumeral} arguments which has been taken from
+provided by Herbert Voss (\url{http://tex.stackexchange.com/a/7594}); \jslp\ and \jsmt\
+use code to test for \jfcsmacro{romannumeral} arguments which has been taken from
 a \emph{stackexchange} post by Enrico Gregorio (\url{http://tex.stackexchange.com/a/50131}).
 Thank you, Herbert and Enrico! Finally, Dominik Waﬂenhoven tested the package and provided
 me with multiple suggestions, which effectively manifested in major new features such as
